objects/AcctSeedERP__Inventory_Balance_History__c/fields/AcctSeedERP__Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>