objects/AcctSeedERP__Inventory_Balance_History__c/fields/AcctSeedERP__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Inventory Quantity Available Histories</relationshipLabel>
    <relationshipName>Inventory_Balance_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>