objects/AcctSeedERP__Inventory_Balance_History__c/listViews/AcctSeedERP__Snapshots2.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__Snapshots2</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Inventory_Balance__c</columns>
    <columns>AcctSeedERP__Available_Quantity__c</columns>
    <columns>AcctSeedERP__Inbound_Quantity__c</columns>
    <columns>AcctSeedERP__Manufacturing_Quantity__c</columns>
    <columns>AcctSeedERP__Outbound_Quantity__c</columns>
    <columns>AcctSeedERP__Purchasing_Quantity__c</columns>
    <columns>AcctSeedERP__Sales_Order_Quantity__c</columns>
    <columns>AcctSeedERP__Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Snapshots</label>
</ListView>